Added favicon.svg component and code for favicon

--- a/src/components/18-header.html
+++ b/src/components/18-header.html
@@ -3,6 +3,9 @@
 
 <head>
   <link rel="stylesheet" href="18-header.css">
+  <title>Career Returnship</title>
+<link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml"/>
+
 </head>
 
 <body>
@@ -18,7 +21,7 @@
     </g>
     </g>
     </svg>
-      
+
     <ul class="topnav" id="hamburgerClick">
       <li><a href="#projects">Projects</a></li>
       <li><a href="#become">Become a member</a></li>
