--- a/src/components/18-header.css
+++ b/src/components/18-header.css
@@ -7,7 +7,16 @@ header {
   font-weight: normal;
   font-size: 22px;
   line-height: 27px;
+
+  /* Nav-Header */ 
+
+  position: absolute;
+  width: 1440px;
+  height: 100px;
+  left: 0px;
+  top: 0px;
 }
+
 body {
   line-height: 1
   margin: 0;
@@ -18,6 +27,7 @@ body {
   font-size: 22px;
   line-height: 27px;
 }
+
 
 /* Logo - Color */
 header {
