--- a/src/components/18-header.css
+++ b/src/components/18-header.css
@@ -8,7 +8,7 @@ header {
   font-size: 22px;
   line-height: 27px;
 
-  /* Nav-Header */ 
+  /* Nav-Header */
 
   position: absolute;
   width: 1440px;
@@ -65,7 +65,9 @@ nav {
   margin: 0;
   position: sticky;
 }
-
+svg{
+  float:left;
+}
 nav ul li {
   overflow: hidden;
   margin: 0;
@@ -78,12 +80,12 @@ ul.topnav li a {
   text-decoration: none;
   min-height: 16px;
   text-align: center;
-  padding: 20px;
+  padding: 14px 14px;
+  font-size: 16px;
   text-transform: capitalize;
   font-family: Montserrat;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
   line-height: 22px;
   /* identical to box height */
   align-items: center;
@@ -92,14 +94,13 @@ ul.topnav li a {
 }
 
 ul.topnav li a:hover {
+  border-radius: 5px;
   background-color: #DA0D46;
   color: white;
   text: bolder;
-  text-decoration-line: underline;
-  border-radius: 5px;
   text-transform: uppercase;
-
 }
+
 ul.topnav li.hamburgerIcon {
   display: none;
   float: right;
